5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4157/executions/1800_2573.log
== SUBMITION (2019-06-13 00:35:59) 
-- CODE:
from numpy import*
p = array(eval(input("massa:")))
a = array(eval(input("altura:")))
n = size(p)
b = zeros(n)
i = 0 
for x in p:
	b[i] = round((x/a[i]**2),2)
	i==1
print(b)
print("O MAIOR IMC DA TURMA EH:",MAX(b))
if(max(b),17):
	print("MUITO ABAIXO DO PESO ")
elif(17<+max(b)<=18.49):
	print("ABAIXO DO PESO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBESIDADE")
elif(35<=max(b)<=34.99):
	print("OBESIDADE SEVERA")
elif(max(b)>40):
	print("OBESIDADE MORBIDA")
elif(35<=max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")
-- EXECUTION TIME:
1.01945
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2573/main.py", line 11, in <module>
    print("O MAIOR IMC DA TURMA EH:",MAX(b))
NameError: name 'MAX' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:36:07) 
-- CODE:
from numpy import*
p = array(eval(input("massa:")))
a = array(eval(input("altura:")))
n = size(p)
b = zeros(n)
i = 0 
for x in p:
	b[i] = round((x/a[i]**2),2)
	i==1
print(b)
print("O MAIOR IMC DA TURMA EH:",MAX(b))
if(max(b),17):
	print("MUITO ABAIXO DO PESO ")
elif(17<+max(b)<=18.49):
	print("ABAIXO DO PESO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBESIDADE")
elif(35<=max(b)<=34.99):
	print("OBESIDADE SEVERA")
elif(max(b)>40):
	print("OBESIDADE MORBIDA")
elif(35<=max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")
-- EXECUTION TIME:
1.29795
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2573/main.py", line 11, in <module>
    print("O MAIOR IMC DA TURMA EH:",MAX(b))
NameError: name 'MAX' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:36:09) 
-- CODE:
from numpy import*
p = array(eval(input("massa:")))
a = array(eval(input("altura:")))
n = size(p)
b = zeros(n)
i = 0 
for x in p:
	b[i] = round((x/a[i]**2),2)
	i==1
print(b)
print("O MAIOR IMC DA TURMA EH:",MAX(b))
if(max(b),17):
	print("MUITO ABAIXO DO PESO ")
elif(17<+max(b)<=18.49):
	print("ABAIXO DO PESO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBESIDADE")
elif(35<=max(b)<=34.99):
	print("OBESIDADE SEVERA")
elif(max(b)>40):
	print("OBESIDADE MORBIDA")
elif(35<=max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")
-- EXECUTION TIME:
1.78394
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2573/main.py", line 11, in <module>
    print("O MAIOR IMC DA TURMA EH:",MAX(b))
NameError: name 'MAX' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:36:41) 
-- CODE:
from numpy import*
p = array(eval(input("massa:")))
a = array(eval(input("altura:")))
n = size(p)
b = zeros(n)
i = 0 
for x in p:
	b[i] = round((x/a[i]**2),2)
	i+=1
print(b)
print("O MAIOR IMC DA TURMA EH:",MAX(b))
if(max(b),17):
	print("MUITO ABAIXO DO PESO ")
elif(17<+max(b)<=18.49):
	print("ABAIXO DO PESO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBESIDADE")
elif(35<=max(b)<=34.99):
	print("OBESIDADE SEVERA")
elif(max(b)>40):
	print("OBESIDADE MORBIDA")
elif(35<=max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")
-- EXECUTION TIME:
0.999369
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2573/main.py", line 11, in <module>
    print("O MAIOR IMC DA TURMA EH:",MAX(b))
NameError: name 'MAX' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:36:48) 
-- CODE:
from numpy import*
p = array(eval(input("massa:")))
a = array(eval(input("altura:")))
n = size(p)
b = zeros(n)
i = 0 
for x in p:
	b[i] = round((x/a[i]**2),2)
	i+=1
print(b)
print("O MAIOR IMC DA TURMA EH:",MAX(b))
if(max(b),17):
	print("MUITO ABAIXO DO PESO ")
elif(17<+max(b)<=18.49):
	print("ABAIXO DO PESO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBESIDADE")
elif(35<=max(b)<=34.99):
	print("OBESIDADE SEVERA")
elif(max(b)>40):
	print("OBESIDADE MORBIDA")
elif(35<=max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")
-- EXECUTION TIME:
1.091
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2573/main.py", line 11, in <module>
    print("O MAIOR IMC DA TURMA EH:",MAX(b))
NameError: name 'MAX' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:37:07) 
-- CODE:
from numpy import*
p = array(eval(input("massa:")))
a = array(eval(input("altura:")))
n = size(p)
b = zeros(n)
i = 0 
for x in p:
	b[i] = round((x/a[i]**2),2)
	i+=1
print(b)
print("O MAIOR IMC DA TURMA EH:",max(b))
if(max(b),17):
	print("MUITO ABAIXO DO PESO ")
elif(17<+max(b)<=18.49):
	print("ABAIXO DO PESO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBESIDADE")
elif(35<=max(b)<=34.99):
	print("OBESIDADE SEVERA")
elif(max(b)>40):
	print("OBESIDADE MORBIDA")
elif(35<=max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")
-- EXECUTION TIME:
0.978614
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
massa:altura:[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
MUITO ABAIXO DO PESO
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
massa:altura:[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
MUITO ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
massa:altura:[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
MUITO ABAIXO DO PESO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:37:22) 
-- CODE:
from numpy import*
p = array(eval(input("massa:")))
a = array(eval(input("altura:")))
n = size(p)
b = zeros(n)
i = 0 
for x in p:
	b[i] = round((x/a[i]**2),2)
	i+=1
print(b)
print("O MAIOR IMC DA TURMA EH:",max(b))
if(max(b)<17):
	print("MUITO ABAIXO DO PESO ")
elif(17<+max(b)<=18.49):
	print("ABAIXO DO PESO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBESIDADE")
elif(35<=max(b)<=34.99):
	print("OBESIDADE SEVERA")
elif(max(b)>40):
	print("OBESIDADE MORBIDA")
elif(35<=max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")
-- EXECUTION TIME:
1.13992
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
obesidade severa
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:37:56) 
-- CODE:
from numpy import*
p = array(eval(input("massa:")))
a = array(eval(input("altura:")))
n = size(p)
b = zeros(n)
i = 0 
for x in p:
	b[i] = round((x/a[i]**2),2)
	i+=1
print(b)
print("O MAIOR IMC DA TURMA EH:",max(b))
if(max(b)<17):
	print("MUITO ABAIXO DO PESO ")
elif(17<=max(b)<=18.49):
	print("ABAIXO DO PESO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBESIDADE")
elif(35<=max(b)<=34.99):
	print("OBESIDADE SEVERA")
elif(max(b)>40):
	print("OBESIDADE MORBIDA")
elif(35<=max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")
-- EXECUTION TIME:
0.859633
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
massa:altura:[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
massa:altura:[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
massa:altura:[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
obesidade severa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:40:49) 
-- CODE:
from numpy import*
p = array(eval(input("massa:")))
a = array(eval(input("altura:")))
n = size(p)
b = zeros(n)
i = 0 
for x in p:
	b[i] = round((x/a[i]**2),2)
	i+=1
print(b)
print("O MAIOR IMC DA TURMA EH:",max(b))
if(max(b)<17):
	print("MUITO ABAIXO DO PESO ")
elif(17<=max(b)<=18.49):
	print("ABAIXO DO PESO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBESIDADE")
elif(35<=max(b)<=34.99):
	print("OBESIDADE SEVERA")
elif(max(b)>40):
	print("OBESIDADE MORBIDA")
elif(35<=max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")
-- EXECUTION TIME:
1.2441
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
obesidade severa
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:48:17) 
-- CODE:
from numpy import*
p = array(eval(input("massa:")))
a = array(eval(input("altura:")))
n = size(p)
b = zeros(n)
i = 0 
for x in p:
	b[i] = round((x/a[i]**2),2)
	i+=1
print(b)
print("O MAIOR IMC DA TURMA EH:",max(b))
if(max(b)<17):
	print("MUITO ABAIXO DO PESO ")
elif(17<=max(b)<=18.49):
	print("ABAIXO DO PESO")
elif(18.5<=max(b)<=24.99):
	print("PESO NORMAL")
elif(25<=max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<=max(b)<=34.99):
	print("OBESIDADE")
elif(35<=max(b)<=34.99):
	print("OBESIDADE SEVERA")
elif(max(b)>40):
	print("OBESIDADE MORBIDA")
elif(35<=max(b)<=39.99):
	print("obesidade severa")
elif(max(b)>40):
	print("obesidade morbida")
-- EXECUTION TIME:
1.07114
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
obesidade severa
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
